--- a/analyses/5community_climate_ecology/analyses/Community_change_MDS.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Community_change_MDS.Rmd
@@ -34,20 +34,23 @@ CCFRP <- read.csv(file.path(data_path, input_file))
 
 #load kelp upc
 input_file <- "kelp_upc_counts.csv" 
-kelp_upc <- read.csv(file.path(data_path, input_file))
+kelp_upc_counts <- read.csv(file.path(data_path, input_file))
 
 #load kelp swath
 input_file <- "kelp_swath_counts.csv" 
-kelp_swath <- read.csv(file.path(data_path, input_file))
+kelp_swath_counts <- read.csv(file.path(data_path, input_file))
 
 #load kelp_fish
 input_file <- "kelp_fish_counts.csv" 
-kelp_fish <- read.csv(file.path(data_path, input_file))
+kelp_fish_counts <- read.csv(file.path(data_path, input_file))
 
 #load deep reef
 input_file <- "deep_reef_fish_counts.csv" 
-deep_reef <- read.csv(file.path(data_path, input_file))
+deep_reef_counts <- read.csv(file.path(data_path, input_file))
 
+#load rocky intertidal
+input_file <- "rocky_counts.csv" 
+rocky_counts <- read.csv(file.path(data_path, input_file))
 
 ```
 
@@ -134,37 +137,154 @@ CCFRP_process <- CCFRP %>%
                   filter(!(sum==0))%>%
                   dplyr::select(-sum) #remove rows containing only zeros
 
-year.CCFRP <- as.numeric(CCFRP_process$year)
-region.CCFRP <- CCFRP_process$region4
-mpa_designation.CCFRP <- CCFRP_process$mpa_designation
-mhw.CCFRP <- CCFRP_process$MHW
+#define grouping vars
+CCFRP_group_vars <- CCFRP_process %>%
+                    dplyr::select(1:9)
 
+#define data for ordination
 CCFRP_ord_data <- CCFRP_process%>%
               dplyr::select(10:ncol(.))
 
-CCFRP_distmat <- vegdist(CCFRP_ord_data, method = "bray") #generates a BC dissim matrix
 
+#calculate relative abundance
+CCFRP_rel <- decostand(CCFRP_ord_data, method = "total")
+
+#generate a BC dissim matrix
+CCFRP_distmat <- vegdist(CCFRP_rel, method = "bray") 
 
 
 
 #kelp swath processing---------------------------------------------------------
 kelp_swath <- kelp_swath_counts %>%
                   rowwise() %>%
-                  mutate(sum = sum(10:ncol(.), na.rm = T)) %>%
-                  filter(!(sum==0))%>%
-                  dplyr::select(-sum) #remove rows containing only zeros
+                  mutate(sum = sum(across(10:ncol(.), na.rm = T))) %>%
+                  filter(!(sum==0))%>% #remove rows containing only zeros
+                  dplyr::select(-sum, unidentified_mobile_invert_species, 
+                                no_organisms_present_in_this_sample) #drop sum columns and non-species categories
 
-year.kelp_swath <- as.numeric(kelp_swath_counts$year)
-region.kelp_swath <- kelp_swath_counts$region4
-mpa_designation.kelp_swath <- kelp_swath_counts$mpa_defacto_designation
-mhw.kelp_swath <- kelp_swath_counts$MHW
+#define grouping vars
+kelp_swath_group_vars <- kelp_swath%>%
+                    dplyr::select(1:9)
 
+#define data for ordination
 kelp_swath_ord_data <- kelp_swath%>%
               ungroup()%>%
               dplyr::select(10:ncol(.))
+
+#calculate relative abundance
+kelp_swath_rel <- decostand(kelp_swath_ord_data, method = "total")
   
+#generate a BC dissim matrix
 kelp_swath_distmat <- 
-    vegdist(kelp_swath_ord_data, method = "bray", na.rm=T) #generates a BC dissim matrix
+    vegdist(kelp_swath_rel, method = "bray", na.rm=T) #generates a BC dissim matrix
+
+
+
+
+#kelp upc processing---------------------------------------------------------
+
+kelp_upc <- kelp_upc_counts %>%
+                  rowwise() %>%
+                  mutate(sum = sum(across(10:ncol(.), na.rm = T))) %>%
+                  filter(!(sum==0))%>% #remove rows containing only zeros
+                  dplyr::select(-sum, bare_rock,unidentified_fish,
+                                bare_sand, shell_debris) #drop sum columns and non-species categories
+
+#define grouping vars
+kelp_upc_group_vars <- kelp_upc%>%
+                    dplyr::select(1:9)
+
+#define data for ordination
+kelp_upc_ord_data <- kelp_upc%>%
+              ungroup()%>%
+              dplyr::select(10:ncol(.))
+
+
+#calculate relative abundance
+kelp_upc_rel <- decostand(kelp_upc_ord_data, method = "total")
+
+#generate a BC dissim matrix
+kelp_upc_distmat <- 
+    vegdist(kelp_upc_rel, method = "bray", na.rm=T) #generates a BC dissim matrix
+
+
+
+
+#kelp fish processing---------------------------------------------------------
+
+kelp_fish <- kelp_fish_counts %>%
+                  rowwise() %>%
+                  mutate(sum = sum(across(11:ncol(.), na.rm = T))) %>%
+                  filter(!(sum==0))%>% #remove rows containing only zeros
+                  dplyr::select(-sum) #drop sum columns and non-species categories
+
+#define grouping vars
+kelp_fish_group_vars <- kelp_fish%>%
+                    dplyr::select(1:10)
+
+#define data for ordination
+kelp_fish_ord_data <- kelp_fish%>%
+              ungroup()%>%
+              dplyr::select(11:ncol(.))
+
+#calculate relative abundance
+kelp_fish_rel <- decostand(kelp_fish_ord_data, method = "total")
+
+#generate a BC dissim matrix
+kelp_fish_distmat <- 
+    vegdist(kelp_fish_rel, method = "bray", na.rm=T) #generates a BC dissim matrix
+
+
+
+#deep reef processing---------------------------------------------------------
+
+deep_reef <- deep_reef_counts %>%
+                  rowwise() %>%
+                  mutate(sum = sum(across(10:ncol(.), na.rm = T))) %>%
+                  filter(!(sum==0))%>% #remove rows containing only zeros
+                  dplyr::select(-c(sum, schooling_10_15_cm_sebastes_sp,
+                                schooling_10_15_cm_sebastes_sp,
+                                young_of_year_10_cm_sebastes_sp,
+                                synodus_lucioceps_or_ophiodon_elongatus,
+                                sebastes_melanops_or_mystinus_or_diaconus)) #drop sum columns and non-species categories
+
+#define grouping vars
+deep_reef_group_vars <- deep_reef%>%
+                    dplyr::select(1:9)
+
+#define data for ordination
+deep_reef_ord_data <- deep_reef%>%
+              ungroup()%>%
+              dplyr::select(10:ncol(.))
+
+#calculate relative abundance
+deep_reef_rel <- decostand(deep_reef_ord_data, method="total")
+
+#generate a BC dissim mat
+deep_reef_distmat <- 
+    vegdist(deep_reef_rel, method = "bray", na.rm=T) #generates a BC dissim matrix
+
+
+
+#Intertidal processing---------------------------------------------------------
+
+
+#define grouping vars
+rocky_group_vars <- rocky_counts%>%
+                    dplyr::select(1:6)
+
+#define data for ordination
+rocky_ord_data <- rocky_counts %>%
+              ungroup() %>%
+              dplyr::select(7:ncol(.))
+
+#calculate relative abundance
+rocky_rel <- decostand(rocky_ord_data, method = "total")
+
+#generate a BC dissim matrix
+rocky_distmat <- 
+    vegdist(rocky_rel, method = "bray", na.rm=T) #generates a BC dissim matrix
+
 
 
 ```
@@ -173,13 +293,17 @@ kelp_swath_distmat <-
 #ordinate all datasets. NOTE: THIS CHUNK TAKES A LOT OF COMPUTATION TIME. Resulting objects are exported as .Rdata
 #and can be loaded directly in next chunk.
 ```{R}
-CCFRP_ord <- metaMDS(distmat, distance="bray") #ordinates the dist matrix
-kelp_swath_ord <- metaMDS(distmat, distance="bray") #ordinates the dist matrix
+CCFRP_ord <- metaMDS(CCFRP_distmat, distance="bray") #ordinates the dist matrix
+kelp_swath_ord <- metaMDS(kelp_swath_distmat, distance="bray") #ordinates the dist matrix
+kelp_fish_ord <- metaMDS(kelp_fish_distmat, distance="bray")
+kelp_upc_ord <- metaMDS(kelp_upc_distmat, distance="bray")
+deep_reef_ord <- metaMDS(deep_reef_distmat, distance="bray")
+rocky_ord <- metaMDS(rocky_distmat, distance="bray")
+
 
 #export to .RData
-
 path_aurora <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data" 
-save(CCFRP_ord, kelp_swath_ord,file = file.path(path_aurora, "bray_nmds_scores"))
+save(CCFRP_ord, kelp_swath_ord, kelp_fish_ord, kelp_upc_ord, deep_reef_ord, rocky_ord, file = file.path(path_aurora, "bray_nmds_scores.rda"))
 
 
 ```
@@ -187,8 +311,10 @@ save(CCFRP_ord, kelp_swath_ord,file = file.path(path_aurora, "bray_nmds_scores")
 
 #CCFRP scores and plot
 ```{r}
+data_path <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data" 
+input_file <- "bray_nmds_scores.rda"
 
-  
+data<- load(file.path(data_path, input_file))
 
 
 
@@ -198,25 +324,25 @@ save(CCFRP_ord, kelp_swath_ord,file = file.path(path_aurora, "bray_nmds_scores")
 
 
 
-scrs <- scores(ord)
+scrs <- scores(CCFRP_ord)
 
-scrs <- cbind(as.data.frame(scrs), mhw, region, mpa_designation) #to facilitate computing centroids, add group var
-scrs$region <- factor(scrs$region, level = c("north","central","north islands","south")) #set order
-scrs$mhw <- factor(scrs$mhw, level = c("before","during","after")) #set order
+scrs <- cbind(as.data.frame(scrs), MHW=CCFRP_group_vars$MHW, region4=CCFRP_group_vars$region4, mpa_designation=CCFRP_group_vars$mpa_designation) #to facilitate computing centroids, add group var
+scrs$region4 <- factor(scrs$region4, level = c("north","central","north islands","south")) #set order
+scrs$MHW <- factor(scrs$MHW, level = c("before","during","after")) #set order
 scrs$mpa_designation <- factor(scrs$mpa_designation, level = c("smr","ref")) #set order
 
 
-cent <- aggregate(cbind(NMDS1, NMDS2) ~ mhw+region+mpa_designation, data = scrs, FUN = mean) #computes centroids by MHW and region
+cent <- aggregate(cbind(NMDS1, NMDS2) ~ MHW+region4+mpa_designation, data = scrs, FUN = mean) #computes centroids by MHW and region
 
-segs <- merge(scrs, setNames(cent, c('mhw','oNMDS1','oNMDS2')),
-              by = 'mhw', sort=FALSE) #to draw the spider, we need to use geom_segment() which required coordinates to draw the segment from and to. Our 'to'
+segs <- merge(scrs, setNames(cent, c('MHW','oNMDS1','oNMDS2')),
+              by = 'MHW', sort=FALSE) #to draw the spider, we need to use geom_segment() which required coordinates to draw the segment from and to. Our 'to'
                                        # coordinates, the xend and yend aesthetics will be the centroids. So we need to replicate the group centroid for each
                                        # observation in the group. T
 
 
 
 
-ggplot(scrs, aes(x = NMDS1, y=NMDS2, shape = region, color = mpa_designation, group=region)) +
+ggplot(scrs, aes(x = NMDS1, y=NMDS2, shape = region4, color = mpa_designation, group=region4)) +
   #geom_segment(data = segs,
                #mapping = aes(xend = oNMDS1, yend = oNMDS2)) + #spiders
   geom_point(data = cent, size=5) +                           #centroids
@@ -224,7 +350,7 @@ ggplot(scrs, aes(x = NMDS1, y=NMDS2, shape = region, color = mpa_designation, gr
             )+           #line connecting groups (years)
   #geom_point() +                                              #sample scores
   #coord_fixed() +
-  geom_text(data=cent, aes(label=mhw), position=position_jitter(width=0.02, height=0.01))+
+  geom_text(data=cent, aes(label=MHW), position=position_jitter(width=0.02, height=0.01))+
   #xlim(-4.5,4.5)+
   #ylim(-0.45,0.65)+
   facet_wrap(~mpa_designation,
